src/grammar/.antlr/TyCParser.py
# Generated from c:/HK252/PPL/BTL/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'case'", "'continue'", 
                     "'default'", "'else'", "'float'", "'for'", "'if'", 
                     "'int'", "'return'", "'string'", "'struct'", "'switch'", 
                     "'void'", "'while'", "'||'", "'&&'", "'=='", "'!='", 
                     "'<='", "'>='", "'++'", "'--'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'<'", "'>'", "'!'", "'='", "'.'", "'{'", 
                     "'}'", "'['", "']'", "'('", "')'", "';'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FLOAT_TYPE", "FOR", "IF", "INT_TYPE", 
                      "RETURN", "STRING_TYPE", "STRUCT", "SWITCH", "VOID", 
                      "WHILE", "LOGICAL_OR", "LOGICAL_AND", "EQUAL", "NOT_EQUAL", 
                      "LESS_EQUAL", "GREATER_EQUAL", "INCREMENT", "DECREMENT", 
                      "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULUS", 
                      "LESS_THAN", "GREATER_THAN", "LOGICAL_NOT", "ASSIGN", 
                      "DOT", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "LEFT_PAREN", "RIGHT_PAREN", "SEMICOLON", 
                      "COMMA", "COLON", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "IDENTIFIER", "FLOAT_LITERAL", "INTEGER_LITERAL", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "STRING_LITERAL", 
                      "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_structDecl = 1
    RULE_structMember = 2
    RULE_funcDecl = 3
    RULE_returnType = 4
    RULE_primitiveType = 5
    RULE_paramList = 6
    RULE_param = 7
    RULE_typeSpec = 8
    RULE_stmt = 9
    RULE_varDecl = 10
    RULE_exprList = 11
    RULE_blockStmt = 12
    RULE_ifStmt = 13
    RULE_whileStmt = 14
    RULE_forStmt = 15
    RULE_forInit = 16
    RULE_forCondition = 17
    RULE_forUpdate = 18
    RULE_switchStmt = 19
    RULE_caseClause = 20
    RULE_breakStmt = 21
    RULE_continueStmt = 22
    RULE_returnStmt = 23
    RULE_exprStmt = 24
    RULE_expr = 25
    RULE_assignExpr = 26
    RULE_logicalOrExpr = 27
    RULE_logicalAndExpr = 28
    RULE_equalityExpr = 29
    RULE_relationalExpr = 30
    RULE_additiveExpr = 31
    RULE_multiplicativeExpr = 32
    RULE_unaryExpr = 33
    RULE_postfixExpr = 34
    RULE_primaryExpr = 35

    ruleNames =  [ "program", "structDecl", "structMember", "funcDecl", 
                   "returnType", "primitiveType", "paramList", "param", 
                   "typeSpec", "stmt", "varDecl", "exprList", "blockStmt", 
                   "ifStmt", "whileStmt", "forStmt", "forInit", "forCondition", 
                   "forUpdate", "switchStmt", "caseClause", "breakStmt", 
                   "continueStmt", "returnStmt", "exprStmt", "expr", "assignExpr", 
                   "logicalOrExpr", "logicalAndExpr", "equalityExpr", "relationalExpr", 
                   "additiveExpr", "multiplicativeExpr", "unaryExpr", "postfixExpr", 
                   "primaryExpr" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    CASE=3
    CONTINUE=4
    DEFAULT=5
    ELSE=6
    FLOAT_TYPE=7
    FOR=8
    IF=9
    INT_TYPE=10
    RETURN=11
    STRING_TYPE=12
    STRUCT=13
    SWITCH=14
    VOID=15
    WHILE=16
    LOGICAL_OR=17
    LOGICAL_AND=18
    EQUAL=19
    NOT_EQUAL=20
    LESS_EQUAL=21
    GREATER_EQUAL=22
    INCREMENT=23
    DECREMENT=24
    PLUS=25
    MINUS=26
    MULTIPLY=27
    DIVIDE=28
    MODULUS=29
    LESS_THAN=30
    GREATER_THAN=31
    LOGICAL_NOT=32
    ASSIGN=33
    DOT=34
    LEFT_BRACE=35
    RIGHT_BRACE=36
    LEFT_BRACKET=37
    RIGHT_BRACKET=38
    LEFT_PAREN=39
    RIGHT_PAREN=40
    SEMICOLON=41
    COMMA=42
    COLON=43
    BLOCK_COMMENT=44
    LINE_COMMENT=45
    IDENTIFIER=46
    FLOAT_LITERAL=47
    INTEGER_LITERAL=48
    ILLEGAL_ESCAPE=49
    UNCLOSE_STRING=50
    STRING_LITERAL=51
    WS=52
    ERROR_CHAR=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def structDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructDeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructDeclContext,i)


        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.FuncDeclContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 70368744223872) != 0):
                self.state = 74
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [13]:
                    self.state = 72
                    self.structDecl()
                    pass
                elif token in [7, 10, 12, 15, 46]:
                    self.state = 73
                    self.funcDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def LEFT_BRACE(self):
            return self.getToken(TyCParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(TyCParser.RIGHT_BRACE, 0)

        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def structMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructMemberContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructMemberContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)




    def structDecl(self):

        localctx = TyCParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(TyCParser.STRUCT)
            self.state = 82
            self.match(TyCParser.IDENTIFIER)
            self.state = 83
            self.match(TyCParser.LEFT_BRACE)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 70368744215680) != 0):
                self.state = 84
                self.structMember()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(TyCParser.RIGHT_BRACE)
            self.state = 91
            self.match(TyCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpec(self):
            return self.getTypedRuleContext(TyCParser.TypeSpecContext,0)


        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_structMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructMember" ):
                listener.enterStructMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructMember" ):
                listener.exitStructMember(self)




    def structMember(self):

        localctx = TyCParser.StructMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structMember)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.typeSpec()
            self.state = 94
            self.match(TyCParser.IDENTIFIER)
            self.state = 95
            self.match(TyCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def LEFT_PAREN(self):
            return self.getToken(TyCParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(TyCParser.RIGHT_PAREN, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(TyCParser.BlockStmtContext,0)


        def returnType(self):
            return self.getTypedRuleContext(TyCParser.ReturnTypeContext,0)


        def paramList(self):
            return self.getTypedRuleContext(TyCParser.ParamListContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)




    def funcDecl(self):

        localctx = TyCParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 97
                self.returnType()


            self.state = 100
            self.match(TyCParser.IDENTIFIER)
            self.state = 101
            self.match(TyCParser.LEFT_PAREN)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 70368744215680) != 0):
                self.state = 102
                self.paramList()


            self.state = 105
            self.match(TyCParser.RIGHT_PAREN)
            self.state = 106
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(TyCParser.PrimitiveTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_returnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnType" ):
                listener.enterReturnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnType" ):
                listener.exitReturnType(self)




    def returnType(self):

        localctx = TyCParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_returnType)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 10, 12, 15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.primitiveType()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(TyCParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(TyCParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(TyCParser.FLOAT_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(TyCParser.STRING_TYPE, 0)

        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_primitiveType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveType" ):
                listener.enterPrimitiveType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveType" ):
                listener.exitPrimitiveType(self)




    def primitiveType(self):

        localctx = TyCParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 38016) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ParamContext)
            else:
                return self.getTypedRuleContext(TyCParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = TyCParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.param()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42:
                self.state = 115
                self.match(TyCParser.COMMA)
                self.state = 116
                self.param()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpec(self):
            return self.getTypedRuleContext(TyCParser.TypeSpecContext,0)


        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = TyCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.typeSpec()
            self.state = 123
            self.match(TyCParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(TyCParser.PrimitiveTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_typeSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpec" ):
                listener.enterTypeSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpec" ):
                listener.exitTypeSpec(self)




    def typeSpec(self):

        localctx = TyCParser.TypeSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typeSpec)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 10, 12, 15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.primitiveType()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(TyCParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(TyCParser.VarDeclContext,0)


        def blockStmt(self):
            return self.getTypedRuleContext(TyCParser.BlockStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(TyCParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(TyCParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(TyCParser.ForStmtContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(TyCParser.SwitchStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(TyCParser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(TyCParser.ContinueStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(TyCParser.ReturnStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(TyCParser.ExprStmtContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = TyCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.blockStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.whileStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 133
                self.forStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 134
                self.switchStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 135
                self.breakStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 136
                self.continueStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 137
                self.returnStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 138
                self.exprStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTO(self):
            return self.getToken(TyCParser.AUTO, 0)

        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def ASSIGN(self):
            return self.getToken(TyCParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)


        def typeSpec(self):
            return self.getTypedRuleContext(TyCParser.TypeSpecContext,0)


        def LEFT_BRACE(self):
            return self.getToken(TyCParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(TyCParser.RIGHT_BRACE, 0)

        def exprList(self):
            return self.getTypedRuleContext(TyCParser.ExprListContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = TyCParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(TyCParser.AUTO)
                self.state = 142
                self.match(TyCParser.IDENTIFIER)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==33:
                    self.state = 143
                    self.match(TyCParser.ASSIGN)
                    self.state = 144
                    self.expr()


                self.state = 147
                self.match(TyCParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.typeSpec()
                self.state = 149
                self.match(TyCParser.IDENTIFIER)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==33:
                    self.state = 150
                    self.match(TyCParser.ASSIGN)
                    self.state = 151
                    self.expr()


                self.state = 154
                self.match(TyCParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.typeSpec()
                self.state = 157
                self.match(TyCParser.IDENTIFIER)
                self.state = 158
                self.match(TyCParser.ASSIGN)
                self.state = 159
                self.match(TyCParser.LEFT_BRACE)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2744969559277568) != 0):
                    self.state = 160
                    self.exprList()


                self.state = 163
                self.match(TyCParser.RIGHT_BRACE)
                self.state = 164
                self.match(TyCParser.SEMICOLON)
                pass

